// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changelog Service given step 1 generates changelog for module 2 1`] = `
"### 0.1.0 (2019-05-14)


### Features

* **module2:** add first file ([14d8b69](/cedricmoulard/conventional-tools/commit/14d8b690b0a72b74cae3aa43a3f520bb671abc32)), closes [#2](/cedricmoulard/conventional-tools/issues/2)
* **shared:** add first file ([b8fba0f](/cedricmoulard/conventional-tools/commit/b8fba0fce8e630880a05d540442d170a6a9bd9e5))
* **shared:** add second file ([bf26eee](/cedricmoulard/conventional-tools/commit/bf26eee06e27f52d7fc9f4738454babf4745c99f)), closes [#1](/cedricmoulard/conventional-tools/issues/1)


### Bug Fixes

* **module2:** fix something ([9a65f55](/cedricmoulard/conventional-tools/commit/9a65f55b938cdab86c3ef11ace33b8267f587fd8)), closes [#2](/cedricmoulard/conventional-tools/issues/2)

"
`;

exports[`Changelog Service given step 2 generates changelog for patch module 2 1`] = `
"### 1.0.1 (2019-05-16)


### Bug Fixes

* **module2:** fix something else ([f5b33c4](/cedricmoulard/conventional-tools/commit/f5b33c401e9081eb87b8d5322b9698dbbed087f6)), closes [#111](/cedricmoulard/conventional-tools/issues/111)

"
`;

exports[`Changelog Service given step 3 generates changelog with breaking change for module 1 (existing tag) 1`] = `
"### 2.0.0 (2019-05-16)


### ⚠ BREAKING CHANGES

* **shared:** refactor all code

### Features

* **module1:** add third file ([547c048](/cedricmoulard/conventional-tools/commit/547c04889baa487288387fcab0cddd4df32d08b5))


### Code Refactoring

* **shared:** refactor all code with breaking change ([b616ee7](/cedricmoulard/conventional-tools/commit/b616ee7b645e8bab55ed3cf45697c40b44de5bc0))

"
`;

exports[`Changelog Service given step 3 generates changelog with breaking change for module 2 1`] = `
"### 2.0.0 (2019-05-16)


### ⚠ BREAKING CHANGES

* **shared:** refactor all code

### Code Refactoring

* **shared:** refactor all code with breaking change ([b616ee7](/cedricmoulard/conventional-tools/commit/b616ee7b645e8bab55ed3cf45697c40b44de5bc0))

"
`;

exports[`Changelog Service given step 3 generates changelog without breaking change for module 2 1`] = `
"### 1.0.1 (2019-05-16)

"
`;
